# rust-chess

./: .gitignore  README.md
client/: .gitignore  Cargo.toml  rustfmt.toml
client/.cargo/: config.toml
client/src/: board.rs  boardstate.rs  boardstatesync.rs  consts.rs  hitarea.rs  input.rs  loading.rs  main.rs  menu.rs  network.rs  piecemanager.rs  quit.rs  rules.rs  scalecamera.rs  sprite_picker.rs
client/src/components/: board.rs  gui.rs  mod.rs  pieces.rs
client/src/plugins/: hitarea.rs  loading.rs  mod.rs  scalecamera.rs
client/src/resources/: board_piecestate.rs  board_renderstate.rs  cpu_player.rs  gui_quit.rs  mod.rs
client/src/systems/: board.rs  gui_mainmenu.rs  gui_quit.rs  mod.rs
client/src/todo/: board.rs  boardstatesync.rs
server/: Cargo.toml
