[package]
name = "client"
version = "0.1.0"
authors = ["pete <peteward44@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0" }
rand = "*"
websocket = "0.26.2"
array-init = "*"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 's'
